Update apex designer and regenerate api clients
